# polars_dt_bench

./: .gitignore  pyproject.toml
.benchmarks/Linux-CPython-3.13-64bit/: 0001_polars-1.19.0.json  0002_polars-1.16.0.json  0003_polars-0.20.3.json
py_src/: main.py
py_tests/: test_bench.py
